Sextant / Citation / Align https://gitlab.ifremer.fr/sextant/geonetwork/-/issues/531.

--- a/web-ui/src/main/resources/catalog/style/gn_metadata.less
+++ b/web-ui/src/main/resources/catalog/style/gn_metadata.less
@@ -9,7 +9,9 @@ blockquote {
   margin: 20px 0px 0px 0px;
   font-size: 100%;
   border: none;
-
+  div.row {
+    margin-right: 0px !important;
+  }
   h2 {
     font-size: 16px !important;
     margin: 0px !important;
@@ -21,6 +23,12 @@ blockquote {
   div.col-md-11 {
     padding: 20px 20px;
     background-color: #ebecec;
+    div, pre {
+      margin: 20px 0px 0px 0px;
+      bloquote {
+        margin: 0px;
+      }
+    }
   }
 }
 
